# sos_labs

./: CMakeLists.txt
lab1/: Makefile  main.c  text.c  text.h
lab10/: Makefile  main.c
lab11/: Makefile  main.c
lab2_cat/: Makefile  main.c
lab2_grep/: Makefile  main.c
lab3/: Makefile  main.c
lab4/: main.c
lab6_fifo/: Makefile  main.c
lab6_pipe/: Makefile  main.c
lab7/: consumer.c  producer.c
lab8/: Makefile  main.c
lab9/: Makefile  consumer.c  producer.c
